# WordWar3

./: CMakeLists.txt  HOW_TO_PLAY.md  build_log.txt  client_main.cpp  main.cpp  server_main.cpp
combat/: Effect.cpp  Effect.h
database/: accounts.json  words.json
manager/: GameManager.cpp  GameManager.h  UIManager.cpp  UIManager.h
network/: Client.cpp  Client.h  Packet.h  Server.cpp  Server.h
player/: Player.cpp  Player.h  Sentence.cpp  Sentence.h
word/: Word.cpp  Word.h  WordDictionary.cpp  WordDictionary.h
